--- a/backend/survey/src/main/resources/application.properties
+++ b/backend/survey/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=survey
 spring.data.mongodb.uri=mongodb+srv://harish:harish@cluster.ideok.mongodb.net/?retryWrites=true&w=majority&appName=Cluster
 spring.data.mongodb.database=survey-master
+survey.build.version=v1
