--- a/backend/survey/src/main/resources/log4j2.properties
+++ b/backend/survey/src/main/resources/log4j2.properties
@@ -15,8 +15,8 @@ rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.file.ref = ROLLING
 appender.rolling.type = RollingFile
 appender.rolling.name = ROLLING
-appender.rolling.fileName = logs/switchenergy.log
-appender.rolling.filePattern = switchenergy-%d{yyyy-MM-dd}-%i.log.gz
+appender.rolling.fileName = logs/survey.log
+appender.rolling.filePattern = survey-%d{yyyy-MM-dd}-%i.log.gz
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 appender.rolling.policies.type = Policies
